src/objects/loan__Repayment_Transaction_Adjustment__c.object
<CustomObject>
    <description>Repayment Transaction Adjustment Object</description>
    <fields>
        <fullName>Attempt_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should System attempt retry for this ? Retry attempt is made after 7 days.</inlineHelpText>
        <label>Attempt Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Adjusted_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Adjusted Amount (+ve or -ve). This is not yet implemented. 
Reversal Txn will reverse the master payment transaction&apos;s full amount.</description>
        <inlineHelpText>Adjusted Amount (+ve or -ve). This is not yet implemented. 
Reversal Txn will reverse the master payment transaction&apos;s full amount.</inlineHelpText>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Adjustment_Txn_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <description>Adjustment Txn Date</description>
        <inlineHelpText>Adjustment Txn Date</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Custom_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Funding Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <description>Loan Payment Transaction</description>
        <inlineHelpText>Loan Payment Transaction</inlineHelpText>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipName>Repayment_Transaction_Adjustment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_ID__c</fullName>
        <displayFormat>RATID-{0000000000}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Signed_Adjusted_Amount__c</fullName>
        <formula>loan__Loan_Payment_Transaction__r.loan__Transaction_Amount__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Repayment Transaction Reversal</label>
    <nameField>
        <displayFormat>RTA-{0000000000}</displayFormat>
        <label>Repayment Transaction Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Transaction Reversal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Check_Clear_Flag</fullName>
        <active>true</active>
        <errorConditionFormula>(loan__Loan_Payment_Transaction__r.loan__Cleared__c == false &amp;&amp; loan__Loan_Payment_Transaction__r.loan__Rejected__c == false) ||  loan__Loan_Payment_Transaction__r.loan__Rejected__c == true</errorConditionFormula>
        <errorMessage>An uncleared or rejected payment transaction cannot be reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Existing_Reversal_Txn</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;  loan__Loan_Payment_Transaction__r.loan__Cleared_Reversal_Txn_Count__c &gt; 0</errorConditionFormula>
        <errorMessage>This repayment transaction has already been reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_for_Suspension</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Loan_Payment_Transaction__r.loan__Loan_Account__r.loan__Suspended__c == true</errorConditionFormula>
        <errorMessage>Unsupported operation - You cannot pass a reversal transaction on a suspended account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Adjustment_Txn_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Transaction date cannot be greater than calendar date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Validate_Txn_Date_Against_System_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.loan__Current_System_Date__c != null,
$User.loan__Current_System_Date__c !=  loan__Adjustment_Txn_Date__c )</errorConditionFormula>
        <errorMessage>Transaction Date must be the same as system date.</errorMessage>
    </validationRules>
</CustomObject>